--- a/JavaFX/demo/src/main/resources/com/example/demo/hello-view.fxml
+++ b/JavaFX/demo/src/main/resources/com/example/demo/hello-view.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.ProgressIndicator?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="210.0" prefWidth="317.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="com.example.demo.HelloController2">
+<VBox prefHeight="210.0" prefWidth="317.0" spacing="20.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController2">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
 
-    <Label fx:id="welcomeText" />
+    <Label fx:id="welcomeText" alignment="CENTER" prefHeight="16.0" prefWidth="0.0" />
     <Button fx:id="gomb1" onAction="#onHelloButtonClick" text="Hello!" />
+   <ProgressBar fx:id="progress1" prefWidth="200.0" progress="0.0" />
+   <ProgressIndicator fx:id="indikator1" progress="0.0" />
 </VBox>
